// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Horizontal bar chart - Screen resolution Should remain unchanged on zoom in 1`] = `
<div>
  <div
    class="fui-hbc__root"
  >
    <div>
      <div
        class="fui-hbc__items"
        data-tabster="{\\"groupper\\":{},\\"focusable\\":{}}"
      >
        <div
          class="fui-hbc__chartTitle"
        >
          <div
            class="fui-hbc__chartTitleLeft"
            data-is-focusable="true"
            role="text"
          >
            one
          </div>
          <div
            class="fui-hbc__chartTitleRight"
            data-is-focusable="false"
            role="text"
          >
            1,543
          </div>
        </div>
        <svg
          aria-label="one"
          class="fui-hbc__chart"
        >
          <g
            id="_HorizontalLine_lllllm_0"
          >
            <rect
              aria-label="2020/04/30, 10%."
              class="fui-hbc__barWrapper"
              data-is-focusable="true"
              fill="#004b50"
              height="12"
              role="img"
              tabindex="0"
              width="10.286666666666665%"
              x="0%"
              y="0"
            />
            <rect
              aria-label="13457/15000."
              class="fui-hbc__barWrapper"
              data-is-focusable="false"
              fill="var(--colorBackgroundOverlay)"
              height="12"
              role="img"
              width="89.71333333333334%"
              x="10.286666666666665%"
              y="0"
            />
          </g>
        </svg>
      </div>
    </div>
    <div>
      <div
        class="fui-hbc__items"
        data-tabster="{\\"groupper\\":{},\\"focusable\\":{}}"
      >
        <div
          class="fui-hbc__chartTitle"
        >
          <div
            class="fui-hbc__chartTitleLeft"
            data-is-focusable="true"
            role="text"
          >
            two
          </div>
          <div
            class="fui-hbc__chartTitleRight"
            data-is-focusable="false"
            role="text"
          >
            800
          </div>
        </div>
        <svg
          aria-label="two"
          class="fui-hbc__chart"
        >
          <g
            id="_HorizontalLine_lllllm_1"
          >
            <rect
              aria-label="2020/04/30, 5%."
              class="fui-hbc__barWrapper"
              data-is-focusable="true"
              fill="#5c2d91"
              height="12"
              role="img"
              tabindex="0"
              width="5.333333333333334%"
              x="0%"
              y="0"
            />
            <rect
              aria-label="14200/15000."
              class="fui-hbc__barWrapper"
              data-is-focusable="false"
              fill="var(--colorBackgroundOverlay)"
              height="12"
              role="img"
              width="94.66666666666667%"
              x="5.333333333333334%"
              y="0"
            />
          </g>
        </svg>
      </div>
    </div>
    <div>
      <div
        class="fui-hbc__items"
        data-tabster="{\\"groupper\\":{},\\"focusable\\":{}}"
      >
        <div
          class="fui-hbc__chartTitle"
        >
          <div
            class="fui-hbc__chartTitleLeft"
            data-is-focusable="true"
            role="text"
          >
            three
          </div>
          <div
            class="fui-hbc__chartTitleRight"
            data-is-focusable="false"
            role="text"
          >
            8,888
          </div>
        </div>
        <svg
          aria-label="three"
          class="fui-hbc__chart"
        >
          <g
            id="_HorizontalLine_lllllm_2"
          >
            <rect
              aria-label="2020/04/30, 59%."
              class="fui-hbc__barWrapper"
              data-is-focusable="true"
              fill="#a4262c"
              height="12"
              role="img"
              tabindex="0"
              width="59.25333333333334%"
              x="0%"
              y="0"
            />
            <rect
              aria-label="6112/15000."
              class="fui-hbc__barWrapper"
              data-is-focusable="false"
              fill="var(--colorBackgroundOverlay)"
              height="12"
              role="img"
              width="40.74666666666666%"
              x="59.25333333333334%"
              y="0"
            />
          </g>
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`Horizontal bar chart - Screen resolution Should remain unchanged on zoom out 1`] = `
<div>
  <div
    class="fui-hbc__root"
  >
    <div>
      <div
        class="fui-hbc__items"
        data-tabster="{\\"groupper\\":{},\\"focusable\\":{}}"
      >
        <div
          class="fui-hbc__chartTitle"
        >
          <div
            class="fui-hbc__chartTitleLeft"
            data-is-focusable="true"
            role="text"
          >
            one
          </div>
          <div
            class="fui-hbc__chartTitleRight"
            data-is-focusable="false"
            role="text"
          >
            1,543
          </div>
        </div>
        <svg
          aria-label="one"
          class="fui-hbc__chart"
        >
          <g
            id="_HorizontalLine_lllllm_0"
          >
            <rect
              aria-label="2020/04/30, 10%."
              class="fui-hbc__barWrapper"
              data-is-focusable="true"
              fill="#004b50"
              height="12"
              role="img"
              tabindex="0"
              width="10.286666666666665%"
              x="0%"
              y="0"
            />
            <rect
              aria-label="13457/15000."
              class="fui-hbc__barWrapper"
              data-is-focusable="false"
              fill="var(--colorBackgroundOverlay)"
              height="12"
              role="img"
              width="89.71333333333334%"
              x="10.286666666666665%"
              y="0"
            />
          </g>
        </svg>
      </div>
    </div>
    <div>
      <div
        class="fui-hbc__items"
        data-tabster="{\\"groupper\\":{},\\"focusable\\":{}}"
      >
        <div
          class="fui-hbc__chartTitle"
        >
          <div
            class="fui-hbc__chartTitleLeft"
            data-is-focusable="true"
            role="text"
          >
            two
          </div>
          <div
            class="fui-hbc__chartTitleRight"
            data-is-focusable="false"
            role="text"
          >
            800
          </div>
        </div>
        <svg
          aria-label="two"
          class="fui-hbc__chart"
        >
          <g
            id="_HorizontalLine_lllllm_1"
          >
            <rect
              aria-label="2020/04/30, 5%."
              class="fui-hbc__barWrapper"
              data-is-focusable="true"
              fill="#5c2d91"
              height="12"
              role="img"
              tabindex="0"
              width="5.333333333333334%"
              x="0%"
              y="0"
            />
            <rect
              aria-label="14200/15000."
              class="fui-hbc__barWrapper"
              data-is-focusable="false"
              fill="var(--colorBackgroundOverlay)"
              height="12"
              role="img"
              width="94.66666666666667%"
              x="5.333333333333334%"
              y="0"
            />
          </g>
        </svg>
      </div>
    </div>
    <div>
      <div
        class="fui-hbc__items"
        data-tabster="{\\"groupper\\":{},\\"focusable\\":{}}"
      >
        <div
          class="fui-hbc__chartTitle"
        >
          <div
            class="fui-hbc__chartTitleLeft"
            data-is-focusable="true"
            role="text"
          >
            three
          </div>
          <div
            class="fui-hbc__chartTitleRight"
            data-is-focusable="false"
            role="text"
          >
            8,888
          </div>
        </div>
        <svg
          aria-label="three"
          class="fui-hbc__chart"
        >
          <g
            id="_HorizontalLine_lllllm_2"
          >
            <rect
              aria-label="2020/04/30, 59%."
              class="fui-hbc__barWrapper"
              data-is-focusable="true"
              fill="#a4262c"
              height="12"
              role="img"
              tabindex="0"
              width="59.25333333333334%"
              x="0%"
              y="0"
            />
            <rect
              aria-label="6112/15000."
              class="fui-hbc__barWrapper"
              data-is-focusable="false"
              fill="var(--colorBackgroundOverlay)"
              height="12"
              role="img"
              width="40.74666666666666%"
              x="59.25333333333334%"
              y="0"
            />
          </g>
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`Horizontal bar chart - Theme Should reflect theme change 1`] = `
<div>
  <div
    class="body-109"
  >
    <div
      class="fui-hbc__root"
    >
      <div>
        <div
          class="fui-hbc__items"
          data-tabster="{\\"groupper\\":{},\\"focusable\\":{}}"
        >
          <div
            class="fui-hbc__chartTitle"
          >
            <div
              class="fui-hbc__chartTitleLeft"
              data-is-focusable="true"
              role="text"
            >
              one
            </div>
            <div
              class="fui-hbc__chartTitleRight"
              data-is-focusable="false"
              role="text"
            >
              1,543
            </div>
          </div>
          <svg
            aria-label="one"
            class="fui-hbc__chart"
          >
            <g
              id="_HorizontalLine_lllllm_0"
            >
              <rect
                aria-label="2020/04/30, 10%."
                class="fui-hbc__barWrapper"
                data-is-focusable="true"
                fill="#004b50"
                height="12"
                role="img"
                tabindex="0"
                width="10.286666666666665%"
                x="0%"
                y="0"
              />
              <rect
                aria-label="13457/15000."
                class="fui-hbc__barWrapper"
                data-is-focusable="false"
                fill="var(--colorBackgroundOverlay)"
                height="12"
                role="img"
                width="89.71333333333334%"
                x="10.286666666666665%"
                y="0"
              />
            </g>
          </svg>
        </div>
      </div>
      <div>
        <div
          class="fui-hbc__items"
          data-tabster="{\\"groupper\\":{},\\"focusable\\":{}}"
        >
          <div
            class="fui-hbc__chartTitle"
          >
            <div
              class="fui-hbc__chartTitleLeft"
              data-is-focusable="true"
              role="text"
            >
              two
            </div>
            <div
              class="fui-hbc__chartTitleRight"
              data-is-focusable="false"
              role="text"
            >
              800
            </div>
          </div>
          <svg
            aria-label="two"
            class="fui-hbc__chart"
          >
            <g
              id="_HorizontalLine_lllllm_1"
            >
              <rect
                aria-label="2020/04/30, 5%."
                class="fui-hbc__barWrapper"
                data-is-focusable="true"
                fill="#5c2d91"
                height="12"
                role="img"
                tabindex="0"
                width="5.333333333333334%"
                x="0%"
                y="0"
              />
              <rect
                aria-label="14200/15000."
                class="fui-hbc__barWrapper"
                data-is-focusable="false"
                fill="var(--colorBackgroundOverlay)"
                height="12"
                role="img"
                width="94.66666666666667%"
                x="5.333333333333334%"
                y="0"
              />
            </g>
          </svg>
        </div>
      </div>
      <div>
        <div
          class="fui-hbc__items"
          data-tabster="{\\"groupper\\":{},\\"focusable\\":{}}"
        >
          <div
            class="fui-hbc__chartTitle"
          >
            <div
              class="fui-hbc__chartTitleLeft"
              data-is-focusable="true"
              role="text"
            >
              three
            </div>
            <div
              class="fui-hbc__chartTitleRight"
              data-is-focusable="false"
              role="text"
            >
              8,888
            </div>
          </div>
          <svg
            aria-label="three"
            class="fui-hbc__chart"
          >
            <g
              id="_HorizontalLine_lllllm_2"
            >
              <rect
                aria-label="2020/04/30, 59%."
                class="fui-hbc__barWrapper"
                data-is-focusable="true"
                fill="#a4262c"
                height="12"
                role="img"
                tabindex="0"
                width="59.25333333333334%"
                x="0%"
                y="0"
              />
              <rect
                aria-label="6112/15000."
                class="fui-hbc__barWrapper"
                data-is-focusable="false"
                fill="var(--colorBackgroundOverlay)"
                height="12"
                role="img"
                width="40.74666666666666%"
                x="59.25333333333334%"
                y="0"
              />
            </g>
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Horizontal bar chart re-rendering Should re-render the Horizontal bar chart with data 1`] = `
<div>
  <div
    aria-label="Graph has no data to display"
    id="_HBC_empty16"
    role="alert"
    style="opacity: 0;"
  />
</div>
`;

exports[`Horizontal bar chart re-rendering Should re-render the Horizontal bar chart with data 2`] = `
<div>
  <div
    class="fui-hbc__root"
    style=""
  >
    <div>
      <div
        class="fui-hbc__items"
        data-tabster="{\\"groupper\\":{},\\"focusable\\":{}}"
      >
        <div
          class="fui-hbc__chartTitle"
        >
          <div
            class="fui-hbc__chartTitleLeft"
            data-is-focusable="true"
            role="text"
          >
            one
          </div>
          <div
            class="fui-hbc__chartTitleRight"
            data-is-focusable="false"
            role="text"
          >
            1,543
          </div>
        </div>
        <svg
          aria-label="one"
          class="fui-hbc__chart"
        >
          <g
            id="_HorizontalLine_lllllm_0"
          >
            <rect
              aria-label="2020/04/30, 10%."
              class="fui-hbc__barWrapper"
              data-is-focusable="true"
              fill="#004b50"
              height="12"
              role="img"
              tabindex="0"
              width="10.286666666666665%"
              x="0%"
              y="0"
            />
            <rect
              aria-label="13457/15000."
              class="fui-hbc__barWrapper"
              data-is-focusable="false"
              fill="var(--colorBackgroundOverlay)"
              height="12"
              role="img"
              width="89.71333333333334%"
              x="10.286666666666665%"
              y="0"
            />
          </g>
        </svg>
      </div>
    </div>
    <div>
      <div
        class="fui-hbc__items"
        data-tabster="{\\"groupper\\":{},\\"focusable\\":{}}"
      >
        <div
          class="fui-hbc__chartTitle"
        >
          <div
            class="fui-hbc__chartTitleLeft"
            data-is-focusable="true"
            role="text"
          >
            two
          </div>
          <div
            class="fui-hbc__chartTitleRight"
            data-is-focusable="false"
            role="text"
          >
            800
          </div>
        </div>
        <svg
          aria-label="two"
          class="fui-hbc__chart"
        >
          <g
            id="_HorizontalLine_lllllm_1"
          >
            <rect
              aria-label="2020/04/30, 5%."
              class="fui-hbc__barWrapper"
              data-is-focusable="true"
              fill="#5c2d91"
              height="12"
              role="img"
              tabindex="0"
              width="5.333333333333334%"
              x="0%"
              y="0"
            />
            <rect
              aria-label="14200/15000."
              class="fui-hbc__barWrapper"
              data-is-focusable="false"
              fill="var(--colorBackgroundOverlay)"
              height="12"
              role="img"
              width="94.66666666666667%"
              x="5.333333333333334%"
              y="0"
            />
          </g>
        </svg>
      </div>
    </div>
    <div>
      <div
        class="fui-hbc__items"
        data-tabster="{\\"groupper\\":{},\\"focusable\\":{}}"
      >
        <div
          class="fui-hbc__chartTitle"
        >
          <div
            class="fui-hbc__chartTitleLeft"
            data-is-focusable="true"
            role="text"
          >
            three
          </div>
          <div
            class="fui-hbc__chartTitleRight"
            data-is-focusable="false"
            role="text"
          >
            8,888
          </div>
        </div>
        <svg
          aria-label="three"
          class="fui-hbc__chart"
        >
          <g
            id="_HorizontalLine_lllllm_2"
          >
            <rect
              aria-label="2020/04/30, 59%."
              class="fui-hbc__barWrapper"
              data-is-focusable="true"
              fill="#a4262c"
              height="12"
              role="img"
              tabindex="0"
              width="59.25333333333334%"
              x="0%"
              y="0"
            />
            <rect
              aria-label="6112/15000."
              class="fui-hbc__barWrapper"
              data-is-focusable="false"
              fill="var(--colorBackgroundOverlay)"
              height="12"
              role="img"
              width="40.74666666666666%"
              x="59.25333333333334%"
              y="0"
            />
          </g>
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`Horizontal bar chart rendering Should render the Horizontal bar chart legend with string data 1`] = `
<div>
  <div
    class="fui-hbc__root"
  >
    <div>
      <div
        class="fui-hbc__items"
        data-tabster="{\\"groupper\\":{},\\"focusable\\":{}}"
      >
        <div
          class="fui-hbc__chartTitle"
        >
          <div
            class="fui-hbc__chartTitleLeft"
            data-is-focusable="true"
            role="text"
          >
            one
          </div>
          <div
            class="fui-hbc__chartTitleRight"
            data-is-focusable="false"
            role="text"
          >
            1,543
          </div>
        </div>
        <svg
          aria-label="one"
          class="fui-hbc__chart"
        >
          <g
            id="_HorizontalLine_lllllm_0"
          >
            <rect
              aria-label="2020/04/30, 10%."
              class="fui-hbc__barWrapper"
              data-is-focusable="true"
              fill="#004b50"
              height="12"
              role="img"
              tabindex="0"
              width="10.286666666666665%"
              x="0%"
              y="0"
            />
            <rect
              aria-label="13457/15000."
              class="fui-hbc__barWrapper"
              data-is-focusable="false"
              fill="var(--colorBackgroundOverlay)"
              height="12"
              role="img"
              width="89.71333333333334%"
              x="10.286666666666665%"
              y="0"
            />
          </g>
        </svg>
      </div>
    </div>
    <div>
      <div
        class="fui-hbc__items"
        data-tabster="{\\"groupper\\":{},\\"focusable\\":{}}"
      >
        <div
          class="fui-hbc__chartTitle"
        >
          <div
            class="fui-hbc__chartTitleLeft"
            data-is-focusable="true"
            role="text"
          >
            two
          </div>
          <div
            class="fui-hbc__chartTitleRight"
            data-is-focusable="false"
            role="text"
          >
            800
          </div>
        </div>
        <svg
          aria-label="two"
          class="fui-hbc__chart"
        >
          <g
            id="_HorizontalLine_lllllm_1"
          >
            <rect
              aria-label="2020/04/30, 5%."
              class="fui-hbc__barWrapper"
              data-is-focusable="true"
              fill="#5c2d91"
              height="12"
              role="img"
              tabindex="0"
              width="5.333333333333334%"
              x="0%"
              y="0"
            />
            <rect
              aria-label="14200/15000."
              class="fui-hbc__barWrapper"
              data-is-focusable="false"
              fill="var(--colorBackgroundOverlay)"
              height="12"
              role="img"
              width="94.66666666666667%"
              x="5.333333333333334%"
              y="0"
            />
          </g>
        </svg>
      </div>
    </div>
    <div>
      <div
        class="fui-hbc__items"
        data-tabster="{\\"groupper\\":{},\\"focusable\\":{}}"
      >
        <div
          class="fui-hbc__chartTitle"
        >
          <div
            class="fui-hbc__chartTitleLeft"
            data-is-focusable="true"
            role="text"
          >
            three
          </div>
          <div
            class="fui-hbc__chartTitleRight"
            data-is-focusable="false"
            role="text"
          >
            8,888
          </div>
        </div>
        <svg
          aria-label="three"
          class="fui-hbc__chart"
        >
          <g
            id="_HorizontalLine_lllllm_2"
          >
            <rect
              aria-label="2020/04/30, 59%."
              class="fui-hbc__barWrapper"
              data-is-focusable="true"
              fill="#a4262c"
              height="12"
              role="img"
              tabindex="0"
              width="59.25333333333334%"
              x="0%"
              y="0"
            />
            <rect
              aria-label="6112/15000."
              class="fui-hbc__barWrapper"
              data-is-focusable="false"
              fill="var(--colorBackgroundOverlay)"
              height="12"
              role="img"
              width="40.74666666666666%"
              x="59.25333333333334%"
              y="0"
            />
          </g>
        </svg>
      </div>
    </div>
  </div>
</div>
`;
